<resources>
    <string name="app_name">App Ver: T 03/05/18</string>
    <string name="app_header">CJT v2</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_button">LOGIN</string>
    <string name="main_concept">Concept</string>
    <string name="main_jobs_pending">Jobs Pending</string>
    <string name="main_view_now">View Now</string>
    <string name="main_concept_ready">Concept Ready for Delivery</string>
    <string name="main_adhocs">Ad Hocs</string>
    <string name="main_messages">Messages</string>
    <string name="main_unread">Unread Messages</string>
    <string name="main_ready_delivery">Ready for Delivery</string>
    <string name="fragment_jobs_list_back">Back</string>
    <string name="fragment_jobs_list_depart">Depart</string>
    <string name="jobs_list_item_suburb">Suburb:</string>
    <string name="jobs_list_item_client_name">Client Name:</string>
    <string name="jobs_list_item_order_no">Order No:</string>
    <string name="jobs_list_item_job_no">Job No:</string>
    <string name="jobs_list_item_booking_time">Booking Time:</string>
    <string name="jobs_list_item_eta">ETA:</string>
    <string name="jobs_list_item_distance">Distance:</string>
    <string name="jobs_list_item_pallets">Pallets:</string>
    <string name="jobs_list_item_parcels">Parcels:</string>
    <string name="job_details_process">Process</string>
    <string name="job_details_suburb">Suburb:</string>
    <string name="job_details_client_name">Client Name:</string>
    <string name="job_details_customer_name">Customer Name:</string>
    <string name="job_details_address">Address:</string>
    <string name="job_details_notes">Notes:</string>
    <string name="job_details_vehicle">Vehicle:</string>
    <string name="job_details_rate">Rate:</string>
    <string name="depart_arrive_concept">Arrive Concept:</string>
    <string name="depart_depart_concept">Depart Concept:</string>
    <string name="depart_neme">Name:</string>
    <string name="depart_sign">Signature:</string>
    <string name="depart_clear">Clear</string>

    <string name="pending">7</string>
    <string name="processed">2</string>
    <string name="delivery_ready">8</string>
    <string name="delivery_processed">9</string>
    <string name="delivered">10</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

</resources>
