<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="au.com.cynjames.mainView.JobsListActivity">

    <View
        android:id="@+id/fragment_job_details_header"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/dark_gray" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginLeft="20dp"
        android:src="@mipmap/logo_red" />

    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/fragment_job_details_header"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/list_item_process_button"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/login_button_bg"
            android:gravity="center"
            android:text="@string/job_details_process"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/list_item_clear_button"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/main_viewnow_orange_bg"
            android:gravity="center"
            android:text="@string/depart_clear"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/fragment_job_details_header_back_button"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/main_viewnow_orange_bg"
            android:gravity="center"
            android:text="@string/fragment_jobs_list_back"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </LinearLayout>

    <View
        android:id="@+id/view_seperator"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/button_layout"
        android:layout_marginTop="5dp"
        android:background="@color/light_gray" />

    <TextView
        android:id="@+id/list_item_arrive_concept_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/view_seperator"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:gravity="left|center"
        android:text="@string/depart_arrive_concept"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/list_item_arrive_concept"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/list_item_depart_concept"
        android:layout_below="@+id/view_seperator"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@+id/list_item_arrive_concept_label"
        android:gravity="left|center"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/list_item_depart_concept_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/list_item_arrive_concept"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:gravity="left|center"
        android:text="@string/depart_depart_concept"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/list_item_depart_concept"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/list_item_arrive_concept"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@+id/list_item_depart_concept_label"
        android:gravity="left|center"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/list_item_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/list_item_depart_concept"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:gravity="left|center"
        android:text="@string/depart_neme"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/list_item_name"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_toRightOf="@+id/list_item_name_label"
        android:layout_below="@+id/list_item_depart_concept"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_white_rounded_with_border"
        android:gravity="left|center"
        android:paddingLeft="5dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/list_item_sign_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/list_item_name"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:gravity="left|center"
        android:text="@string/depart_sign"
        android:textAppearance="?android:attr/textAppearanceMedium" />


    <android.gesture.GestureOverlayView
        android:id="@+id/list_item_sign"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/list_item_sign_label"
        android:background="@drawable/bg_white_rounded_with_border"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:eventsInterceptionEnabled="true"
        android:fadeEnabled="false"
        android:gestureColor="@color/black"
        android:gestureStrokeLengthThreshold="0.1"
        android:gestureStrokeType="multiple"
        android:orientation="vertical"/>

</RelativeLayout>
