<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="10dp">


    <TextView
        android:id="@+id/list_item_suburb_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:gravity="left|center"
        android:textColor="@color/white"
        android:text="@string/jobs_list_item_suburb"
        android:textAppearance="?android:attr/textAppearanceSmall"/>

    <TextView
        android:id="@+id/list_item_suburb"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/list_item_suburb_label"
        android:layout_marginTop="10dp"
        android:gravity="left|center"
        android:textColor="@color/white"
        android:textAppearance="?android:attr/textAppearanceSmall"/>

    <TextView
        android:id="@+id/list_item_pallets_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/list_item_suburb"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:gravity="left|center"
        android:text="@string/jobs_list_item_pallets"
        android:textAppearance="?android:attr/textAppearanceSmall"/>

    <TextView
        android:id="@+id/list_item_pallets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/list_item_pallets_label"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="10dp"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        android:gravity="left|center"
        android:textAppearance="?android:attr/textAppearanceSmall"/>

    <TextView
        android:id="@+id/list_item_order_no_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/list_item_suburb"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:gravity="left|center"
        android:textColor="@color/white"
        android:text="@string/jobs_list_item_order_no"
        android:textAppearance="?android:attr/textAppearanceSmall"/>

    <TextView
        android:id="@+id/list_item_order_no"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/list_item_suburb"
        android:layout_toRightOf="@+id/list_item_order_no_label"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:textColor="@color/white"
        android:gravity="left|center"
        android:textAppearance="?android:attr/textAppearanceSmall"/>

    <TextView
        android:id="@+id/list_item_order_no_type"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/list_item_suburb"
        android:layout_toRightOf="@+id/list_item_order_no"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:textColor="@color/white"
        android:gravity="left|center"
        android:textAppearance="?android:attr/textAppearanceSmall"/>

    <TextView
        android:id="@+id/list_item_parcels_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/list_item_suburb"
        android:layout_alignLeft="@+id/list_item_pallets_label"
        android:layout_marginTop="5dp"
        android:gravity="left|center"
        android:textColor="@color/white"
        android:text="@string/jobs_list_item_parcels"
        android:textAppearance="?android:attr/textAppearanceSmall"/>

    <TextView
        android:id="@+id/list_item_parcels"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/list_item_suburb"
        android:layout_alignLeft="@+id/list_item_pallets"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:textColor="@color/white"
        android:gravity="left|center"
        android:textAppearance="?android:attr/textAppearanceSmall"/>

    <TextView
        android:id="@+id/list_item_client_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/list_item_order_no"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:gravity="left|center"
        android:textColor="@color/white"
        android:text="@string/jobs_list_item_client_name"
        android:textAppearance="?android:attr/textAppearanceSmall"/>

    <TextView
        android:id="@+id/list_item_client_name"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/list_item_order_no"
        android:layout_toRightOf="@+id/list_item_client_label"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:gravity="left|center"
        android:textColor="@color/white"
        android:textAppearance="?android:attr/textAppearanceSmall"/>

    <TextView
        android:id="@+id/list_item_booking_time_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/list_item_client_name"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:textColor="@color/white"
        android:gravity="left|center"
        android:text="@string/jobs_list_item_booking_time"
        android:textAppearance="?android:attr/textAppearanceSmall"/>

    <TextView
        android:id="@+id/list_item_booking_time"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/list_item_client_name"
        android:layout_toRightOf="@+id/list_item_booking_time_label"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:textColor="@color/white"
        android:gravity="left|center"
        android:textAppearance="?android:attr/textAppearanceSmall"/>

    <View
        android:id="@+id/list_item_timefor_line"
        android:layout_width="5dp"
        android:layout_height="match_parent"
        android:layout_alignTop="@+id/list_item_suburb"
        android:layout_alignBottom="@+id/list_item_booking_time"
        android:background="@color/orange"/>

</RelativeLayout>